[gd_scene format=3 uid="uid://b2gf7obd6wwhk"]

[ext_resource type="Script" uid="uid://1dr1kq5ex2bw" path="res://Scenes/Menus/ad_layout.gd" id="1_2b6r5"]
[ext_resource type="Theme" uid="uid://caljym4n8ghq8" path="res://Assets/Styles/DefaultTheme.tres" id="1_nfl8x"]
[ext_resource type="Script" uid="uid://ihu4evvvu1ue" path="res://Scripts/settings_screen.gd" id="1_u03vw"]
[ext_resource type="Script" uid="uid://d2xl418opv1fq" path="res://Scenes/Menus/scroll_container.gd" id="2_nfl8x"]
[ext_resource type="PackedScene" uid="uid://dve3ihhfdxc3w" path="res://Scenes/Menus/close_button.tscn" id="2_u03vw"]
[ext_resource type="Texture2D" uid="uid://dj5ymgtujgle6" path="res://Assets/UI/options_icons_etc/musicnote_2.png" id="4_qwjhj"]
[ext_resource type="Script" uid="uid://bxl2hwwcycl0s" path="res://Scripts/audio_button.gd" id="5_64y2j"]
[ext_resource type="Texture2D" uid="uid://dk1jjkosknlgo" path="res://Assets/UI/options_icons_etc/musicnote_1_white.png" id="5_nfl8x"]
[ext_resource type="Texture2D" uid="uid://cujin12teacdj" path="res://Assets/UI/options_icons_etc/speaker_3_white.png" id="8_2b6r5"]
[ext_resource type="Texture2D" uid="uid://n0icqrejpobn" path="res://Assets/UI/options_icons_etc/speaker_off_2.png" id="11_whg11"]
[ext_resource type="Texture2D" uid="uid://1c7arj57sx2i" path="res://Assets/UI/Google Branding/Play Games/games_achievements_white.png" id="12_2b6r5"]
[ext_resource type="Texture2D" uid="uid://ylcsjr7l3m4j" path="res://Assets/UI/Google Branding/Play Games/games_leaderboards_white.png" id="13_qwjhj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_umxxc"]
texture = ExtResource("5_nfl8x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ovcku"]
texture = ExtResource("4_qwjhj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g648p"]
texture = ExtResource("8_2b6r5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t7vc4"]
texture = ExtResource("11_whg11")

[sub_resource type="ButtonGroup" id="ButtonGroup_7smr3"]

[node name="AdLayoutContainer" type="VBoxContainer" unique_id=742566856]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2b6r5")

[node name="OuterPanelContainer" type="PanelContainer" parent="." unique_id=1354738231]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("1_nfl8x")

[node name="ScrollContainer" type="ScrollContainer" parent="OuterPanelContainer" unique_id=910289530]
clip_children = 1
custom_minimum_size = Vector2(610, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("1_nfl8x")
theme_type_variation = &"LowerScrollContainer"
horizontal_scroll_mode = 0
script = ExtResource("2_nfl8x")

[node name="SettingsContainer" type="PanelContainer" parent="OuterPanelContainer/ScrollContainer" unique_id=1316018813]
process_mode = 3
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_nfl8x")
theme_type_variation = &"InnerContainer"

[node name="SettingsScreen" type="VBoxContainer" parent="OuterPanelContainer/ScrollContainer/SettingsContainer" unique_id=1148790409 node_paths=PackedStringArray("music_mute", "sfx_mute", "hold_controls", "tap_controls", "language_selector", "googlePlayButtonsContainer")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12
alignment = 2
script = ExtResource("1_u03vw")
music_mute = NodePath("SoundButtons/MusicMute")
sfx_mute = NodePath("SoundButtons/SFXMute")
hold_controls = NodePath("HBoxContainer2/HoldControls")
tap_controls = NodePath("HBoxContainer2/TapControls")
language_selector = NodePath("VBoxContainer/LanguageSelector")
googlePlayButtonsContainer = NodePath("HBoxContainer")

[node name="Label" type="Label" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=542016325]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_nfl8x")
theme_type_variation = &"HeaderLarge"
text = "SETTINGS"
horizontal_alignment = 1

[node name="SoundButtons" type="HBoxContainer" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=359946672]
layout_mode = 2
size_flags_vertical = 3

[node name="SoundLabel" type="Label" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/SoundButtons" unique_id=732019491]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_nfl8x")
theme_type_variation = &"HeaderMedium"
text = "SOUND"

[node name="MusicMute" type="Button" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/SoundButtons" unique_id=2030959185]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/h_separation = 4
theme_override_constants/line_spacing = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_umxxc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ovcku")
theme_override_styles/hover = SubResource("StyleBoxTexture_umxxc")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ovcku")
toggle_mode = true
script = ExtResource("5_64y2j")
metadata/_edit_use_anchors_ = true

[node name="SFXMute" type="Button" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/SoundButtons" unique_id=1741998612]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_g648p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_t7vc4")
theme_override_styles/hover = SubResource("StyleBoxTexture_g648p")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_t7vc4")
toggle_mode = true
script = ExtResource("5_64y2j")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=733936477]
layout_mode = 2

[node name="Label" type="Label" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer2" unique_id=320440196]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_nfl8x")
theme_type_variation = &"HeaderMedium"
text = "CONTROLS"

[node name="HoldControls" type="CheckBox" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer2" unique_id=1943575057]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_nfl8x")
button_pressed = true
button_group = SubResource("ButtonGroup_7smr3")
text = "HOLD"
script = ExtResource("5_64y2j")

[node name="TapControls" type="CheckBox" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer2" unique_id=1700117276]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_nfl8x")
button_group = SubResource("ButtonGroup_7smr3")
text = "TAP"
script = ExtResource("5_64y2j")

[node name="VBoxContainer" type="HBoxContainer" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=477237773]
layout_mode = 2

[node name="LanguageLabel" type="Label" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/VBoxContainer" unique_id=1948724054]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_nfl8x")
theme_type_variation = &"HeaderMedium"
text = "LANGUAGE"

[node name="LanguageSelector" type="OptionButton" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/VBoxContainer" unique_id=812837733]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_nfl8x")
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Norsk"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=1768239325]
layout_mode = 2
alignment = 1

[node name="AchievementsButton" type="Button" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer" unique_id=2009678036]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_nfl8x")
theme_type_variation = &"EmptyButton"
icon = ExtResource("12_2b6r5")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("5_64y2j")

[node name="LeaderboardsButton" type="Button" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer" unique_id=1644430493]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_nfl8x")
theme_type_variation = &"EmptyButton"
theme_override_font_sizes/font_size = 20
icon = ExtResource("13_qwjhj")
flat = true
expand_icon = true
script = ExtResource("5_64y2j")

[node name="SkinSelect" type="Button" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=1013354946]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_nfl8x")
text = "CHANGE_DOG"
script = ExtResource("5_64y2j")

[node name="DebugSettings" type="Button" parent="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" unique_id=1629551732]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_nfl8x")
text = "DEBUG_SETTINGS"
script = ExtResource("5_64y2j")

[node name="CloseButton" parent="OuterPanelContainer" unique_id=998217422 instance=ExtResource("2_u03vw")]
layout_mode = 2

[node name="AdPanel" type="Panel" parent="." unique_id=800514159]
visible = false
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_nfl8x")
theme_type_variation = &"EmptyPanel"

[connection signal="toggled" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/SoundButtons/MusicMute" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_music_mute_toggled"]
[connection signal="toggled" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/SoundButtons/SFXMute" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_sfx_mute_toggled"]
[connection signal="toggled" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer2/HoldControls" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_hold_controls_toggled"]
[connection signal="item_selected" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/VBoxContainer/LanguageSelector" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_language_selector_item_selected"]
[connection signal="pressed" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer/AchievementsButton" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_achievements_button_pressed"]
[connection signal="pressed" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/HBoxContainer/LeaderboardsButton" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_leaderboards_button_pressed"]
[connection signal="pressed" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/SkinSelect" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_skin_select_pressed"]
[connection signal="pressed" from="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen/DebugSettings" to="OuterPanelContainer/ScrollContainer/SettingsContainer/SettingsScreen" method="_on_debug_settings_pressed"]
